name: Macbeth-lib
synopsis: Macbeth - A FICS client
description: A FICS client written with OSX in mind 
maintainer: Tilmann Gass
homepage: http://www.macbeth-ficsclient.com
category: Games
version: 0.0.9
cabal-version: >= 1.8
build-type: Simple
license: GPL
license-file: LICENSE
data-dir: resources
source-repository head
  type: git 
  location: https://github.com/tgass/macbeth 

library
    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, lens
    hs-source-dirs: src
    exposed-modules: Paths,
                     Macbeth.Fics.FicsConnection
                     Macbeth.Fics.FicsMessage,
                     Macbeth.Fics.Configuration,
                     Macbeth.Fics.Api.Api,
                     Macbeth.Fics.Api.Challenge,
                     Macbeth.Fics.Api.Game,
                     Macbeth.Fics.Api.Move,
                     Macbeth.Fics.Api.Rating,
                     Macbeth.Fics.Api.PendingOffer,
                     Macbeth.Fics.Api.Seek,
                     Macbeth.Fics.Parsers.Api,
                     Macbeth.Fics.Parsers.FicsMessageParser,
                     Macbeth.Fics.Parsers.GamesParser,
                     Macbeth.Fics.Parsers.MoveParser,
                     Macbeth.Fics.Parsers.PositionParser,
                     Macbeth.Fics.Parsers.RatingParser,
                     Macbeth.Fics.Parsers.SeekMsgParsers,
                     Macbeth.Fics.Utils.Bitmask,
                     Macbeth.Utils.BoardUtils,
                     Macbeth.Utils.PGN,
                     Macbeth.Utils.FEN,
                     Macbeth.Utils.Utils,
                     Macbeth.Wx.BoardState,
                     Macbeth.Wx.Board,
                     Macbeth.Wx.Challenge,
                     Macbeth.Wx.StatusPanel,
                     Macbeth.Wx.Configuration,
                     Macbeth.Wx.Finger,
                     Macbeth.Wx.GamesList,
                     Macbeth.Wx.GameMoves,
                     Macbeth.Wx.GameType,
                     Macbeth.Wx.Login,
                     Macbeth.Wx.Match,
                     Macbeth.Wx.Game,
                     Macbeth.Wx.Pending,
                     Macbeth.Wx.PieceSet,
                     Macbeth.Wx.Seek,
                     Macbeth.Wx.SoughtList,
                     Macbeth.Wx.ToolBox,
                     Macbeth.Wx.Utils
  other-modules: Paths_Macbeth
  ghc-options: -W

executable Macbeth
  main-is: src/Macbeth.hs
  build-depends: base  >= 4.2, wx, wxcore, Macbeth-lib, stm
  ghc-options: -O3 -threaded -W

test-suite macbeth-lib-test
    type: exitcode-stdio-1.0 
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends: Macbeth-lib, base, hspec, bytestring, attoparsec
