name: Macbeth-lib
version: 0.0.5
cabal-version: >= 1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: resources

library
    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet, 
                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                   time, MissingH, old-locale, safe, FindBin
    hs-source-dirs: src
    exposed-modules: Paths,
                     Macbeth.Api.Api,
                     Macbeth.Api.Challenge,
                     Macbeth.Api.CommandMsg,
                     Macbeth.Api.Game,
                     Macbeth.Api.Move,
                     Macbeth.Api.Rating,
                     Macbeth.Api.Seek,
                     Macbeth.Fics.FicsConnection
                     Macbeth.Fics.Parsers.Api,
                     Macbeth.Fics.Parsers.CommandMsgParser,
                     Macbeth.Fics.Parsers.GamesParser,
                     Macbeth.Fics.Parsers.MoveParser,
                     Macbeth.Fics.Parsers.PositionParser,
                     Macbeth.Fics.Parsers.RatingParser,
                     Macbeth.Fics.Parsers.SeekMsgParsers,
                     Macbeth.Utils.PGN,
                     Macbeth.Utils.FEN,
                     Macbeth.Utils.Board,
                     Macbeth.Utils.Utils,
                     Macbeth.Wx.About,
                     Macbeth.Wx.Api,
                     Macbeth.Wx.Challenge,
                     Macbeth.Wx.Clock,
                     Macbeth.Wx.Finger,
                     Macbeth.Wx.GamesList,
                     Macbeth.Wx.GameMoves,
                     Macbeth.Wx.GameType,
                     Macbeth.Wx.Login,
                     Macbeth.Wx.Match,
                     Macbeth.Wx.ObservedGame,
                     Macbeth.Wx.Pending,
                     Macbeth.Wx.PieceSet,
                     Macbeth.Wx.Seek,
                     Macbeth.Wx.SoughtList,
                     Macbeth.Wx.ToolBox,
                     Macbeth.Wx.Utils
  other-modules: Paths_Macbeth
  ghc-options: -O3 -threaded -W

executable Macbeth
  main-is: src/Macbeth.hs
  build-depends: base  >= 4.2, wx, wxcore, Macbeth-lib, stm
  ghc-options: -O3 -threaded -W

Test-Suite MacbethTestSuite
    type:       detailed-0.9
    hs-source-dirs: test
    test-module: MacbethTest
    build-depends: Macbeth, base, Cabal >= 1.9.2, bytestring
