name: Macbeth-lib
version: 0.0.6
cabal-version: >= 1.8
build-type: Simple
license: AllRightsReserved
license-file: ""
data-dir: resources

library
    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, sodium, directory, filepath,
                   time, MissingH, old-locale, safe, FindBin
    hs-source-dirs: src
    exposed-modules: Paths,
                     Macbeth.Fics.FicsConnection
                     Macbeth.Fics.FicsMessage,
                     Macbeth.Fics.Api.Api,
                     Macbeth.Fics.Api.Challenge,
                     Macbeth.Fics.Api.Game,
                     Macbeth.Fics.Api.Move,
                     Macbeth.Fics.Api.Rating,
                     Macbeth.Fics.Api.PendingOffer,
                     Macbeth.Fics.Api.Seek,
                     Macbeth.Fics.Parsers.Api,
                     Macbeth.Fics.Parsers.CommandMsgParser,
                     Macbeth.Fics.Parsers.GamesParser,
                     Macbeth.Fics.Parsers.MoveParser,
                     Macbeth.Fics.Parsers.PositionParser,
                     Macbeth.Fics.Parsers.RatingParser,
                     Macbeth.Fics.Parsers.SeekMsgParsers,
                     Macbeth.Fics.Utils.Bitmask,
                     Macbeth.Utils.PGN,
                     Macbeth.Utils.FEN,
                     Macbeth.Utils.Board,
                     Macbeth.Utils.Utils,
                     Macbeth.Wx.About,
                     Macbeth.Wx.Api,
                     Macbeth.Wx.Challenge,
                     Macbeth.Wx.Clock,
                     Macbeth.Wx.Finger,
                     Macbeth.Wx.GamesList,
                     Macbeth.Wx.GameMoves,
                     Macbeth.Wx.GameType,
                     Macbeth.Wx.Login,
                     Macbeth.Wx.Match,
                     Macbeth.Wx.ObservedGame,
                     Macbeth.Wx.Pending,
                     Macbeth.Wx.PieceSet,
                     Macbeth.Wx.Seek,
                     Macbeth.Wx.SoughtList,
                     Macbeth.Wx.ToolBox,
                     Macbeth.Wx.Utils
  other-modules: Paths_Macbeth
  ghc-options: -O3 -threaded -W

executable Macbeth
  main-is: src/Macbeth.hs
  build-depends: base  >= 4.2, wx, wxcore, Macbeth-lib, stm
  ghc-options: -O3 -threaded -W

Test-Suite MacbethTestSuite
    type:       detailed-0.9
    hs-source-dirs: test
    test-module: MacbethTest
    build-depends: Macbeth-lib, base, Cabal >= 1.9.2, bytestring
