name: macbeth-lib
synopsis: Macbeth - A beautiful and minimalistic FICS client
description: A FICS client written with OSX in mind.
author: Tilmann Gass
maintainer: tilmann@macbeth-ficsclient.com
homepage: http://www.macbeth-ficsclient.com
bug-reports: https://github.com/tgass/macbeth/issues
category: game
version: 0.0.27
cabal-version: >= 1.8
build-type: Simple
license: GPL
license-file: LICENSE
data-dir: resources
extra-source-files: test/*.hs
source-repository head
  type: git
  location: https://github.com/tgass/macbeth

library
    build-depends: base >=4.2 && <5, wxcore, wx, network, conduit, conduit-extra, text, transformers, resourcet,
                   bytestring, split, attoparsec, filepath, containers, split, mtl, stm, directory, filepath,
                   time, MissingH, old-locale, safe, FindBin, yaml, either-unwrap, cryptocipher, crypto-cipher-types,
                   binary, hslogger, aeson, process, OpenAL, ALUT, lens, unordered-containers
    hs-source-dirs: src
    exposed-modules: Paths,
                     Macbeth.Fics.FicsConnection
                     Macbeth.Fics.FicsMessage,
                     Macbeth.Fics.AppConfig,
                     Macbeth.Fics.Api.Api,
                     Macbeth.Fics.Api.Chat,
                     Macbeth.Fics.Api.Game,
                     Macbeth.Fics.Api.Move,
                     Macbeth.Fics.Api.Rating,
                     Macbeth.Fics.Api.Seek,
                     Macbeth.Fics.Api.Offer,
                     Macbeth.Fics.Api.OngoingGame,
                     Macbeth.Fics.Api.Player,
                     Macbeth.Fics.Api.Result,
                     Macbeth.Fics.Parsers.Api,
                     Macbeth.Fics.Parsers.Chatting,
                     Macbeth.Fics.Parsers.FicsMessageParser,
                     Macbeth.Fics.Parsers.GamesParser,
                     Macbeth.Fics.Parsers.MoveParser,
                     Macbeth.Fics.Parsers.Players,
                     Macbeth.Fics.Parsers.PositionParser,
                     Macbeth.Fics.Parsers.RatingParser,
                     Macbeth.Fics.Parsers.SeekMsgParsers,
                     Macbeth.Fics.Utils.Bitmask,
                     Macbeth.Utils.BoardUtils,
                     Macbeth.Utils.PGN,
                     Macbeth.Utils.FEN,
                     Macbeth.Utils.Utils,
                     Macbeth.Utils.Salt,
                     Macbeth.Wx.Challenge,
                     Macbeth.Wx.Chat,
                     Macbeth.Wx.ChatRegistry,
                     Macbeth.Wx.Configuration,
                     Macbeth.Wx.Finger,
                     Macbeth.Wx.GamesList,
                     Macbeth.Wx.GameType,
                     Macbeth.Wx.Login,
                     Macbeth.Wx.Match,
                     Macbeth.Wx.Pending,
                     Macbeth.Wx.PartnerOffer,
                     Macbeth.Wx.PlayersList,
                     Macbeth.Wx.RuntimeEnv,
                     Macbeth.Wx.Seek,
                     Macbeth.Wx.SoughtList,
                     Macbeth.Wx.ToolBox,
                     Macbeth.Wx.Utils,
                     Macbeth.Wx.Game.BoardState,
                     Macbeth.Wx.Game.Board,
                     Macbeth.Wx.Game.Game,
                     Macbeth.Wx.Game.PieceSet,
                     Macbeth.Wx.Game.StatusPanel,
                     Macbeth.Wx.Game.GameSounds,
                     Macbeth.Wx.Config.UserConfig,
                     Macbeth.Wx.Config.Sounds,
                     Macbeth.Wx.Config.BoardConfig
  other-modules: Paths_Macbeth
  ghc-options: -Wall

executable Macbeth
  main-is: src/Macbeth.hs
  build-depends: base  >= 4.2, wx, wxcore, macbeth-lib, stm, ALUT
  ghc-options: -O3 -threaded -W
  extra-lib-dirs: /usr/local/Cellar/freealut/1.1.0/lib

test-suite macbeth-lib-test
    type: exitcode-stdio-1.0
    ghc-options: -W
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: FicsMessageParserSpec, GameResultSpec, PlayersSpec, SeekSpec, ChattingSpec, FicsConnectionSpec
    build-depends: macbeth-lib, base, hspec == 2.*, bytestring, attoparsec, conduit
