name: macbeth-bin
synopsis: Macbeth - A beautiful and minimalistic FICS client
description: A FICS client written with OSX in mind.
author: Tilmann Gass
maintainer: tilmann@macbeth-ficsclient.com
homepage: http://www.macbeth-ficsclient.com
bug-reports: https://github.com/tgass/macbeth/issues
category: game
version: 0.0.32
cabal-version: >= 1.8
Build-Type: Custom
license: GPL
license-file: LICENSE
data-dir: resources
data-files: zseal
source-repository head
  type: git
  location: https://github.com/tgass/macbeth

custom-setup
  setup-depends:
      base
   , Cabal
   , filepath
   , directory

executable Macbeth
  main-is: src/Macbeth.hs
  other-modules: Paths_macbeth_bin
  build-depends: ALUT, base, macbeth-fics, macbeth-wx, filepath, wx
  ghc-options: -O2 -threaded -W
  extra-lib-dirs: /usr/local/Cellar/freealut/1.1.0/lib

