name: macbeth-fics
synopsis: Providing an API for FICS
description: Providing an API for FICS
author: Tilmann Gass
maintainer: tilmann@macbeth-ficsclient.com
homepage: http://www.macbeth-ficsclient.com
bug-reports: https://github.com/tgass/macbeth/issues
category: game
version: 0.0.32
cabal-version: >= 1.8
Build-Type: Simple
license: GPL
license-file: LICENSE
extra-source-files: test/*.hs
source-repository head
  type: git
  location: https://github.com/tgass/macbeth

flag console_log
  description: logs to console
  default: False

library
  build-depends: 
      aeson
    , async
    , attoparsec
    , base
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , exceptions
    , filepath
    , hslogger
    , lens
    , mtl
    , network
    , resourcet
    , split
    , text
  hs-source-dirs: src
  ghc-options: -Wall
  if flag(console_log)
    cpp-options: -DCONSOLE_LOG
  default-extensions: 
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiWayIf 
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving 
    TypeSynonymInstances
    ViewPatterns
  exposed-modules: 
    Macbeth.Fics.Api.Api
    Macbeth.Fics.Api.Game
    Macbeth.Fics.Api.GameType
    Macbeth.Fics.Api.Move
    Macbeth.Fics.Api.Offer
    Macbeth.Fics.Api.OngoingGame
    Macbeth.Fics.Api.Player
    Macbeth.Fics.Api.Rating
    Macbeth.Fics.Api.Result
    Macbeth.Fics.Api.Seek
    Macbeth.Fics.Api.Stored
    Macbeth.Fics.Connection
    Macbeth.Fics.Commands
    Macbeth.Fics.Commands.Seek
    Macbeth.Fics.Message
    Macbeth.Fics.Parsers.Api
    Macbeth.Fics.Parsers.Chatting
    Macbeth.Fics.Parsers.GamesParser
    Macbeth.Fics.Parsers.MessageParser
    Macbeth.Fics.Parsers.MoveParser
    Macbeth.Fics.Parsers.Players
    Macbeth.Fics.Parsers.PositionParser
    Macbeth.Fics.Parsers.RatingParser
    Macbeth.Fics.Parsers.SeekMsgParsers
    Macbeth.Fics.Parsers.Stored
    Macbeth.Fics.Timeseal
    Macbeth.Fics.Utils.Bitmask

test-suite macbeth-fics-test
  type: exitcode-stdio-1.0
  ghc-options: -W
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: macbeth-fics, base, hspec, bytestring, attoparsec, conduit, aeson
  default-extensions: 
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiWayIf 
    OverloadedStrings
    RecordWildCards

