name: macbeth-wx
synopsis: Macbeth - A beautiful and minimalistic FICS client
description: A FICS client written with OSX in mind.
author: Tilmann Gass
maintainer: tilmann@macbeth-ficsclient.com
homepage: http://www.macbeth-ficsclient.com
bug-reports: https://github.com/tgass/macbeth/issues
category: game
version: 0.0.33
cabal-version: >= 1.8
Build-Type: Simple
license: GPL
license-file: LICENSE
data-dir: resources
data-files:
  sounds/*.wav
  icons/*.gif
  tiles/*.png
  pieces/*.png
source-repository head
  type: git
  location: https://github.com/tgass/macbeth

flag console_log
  description: Puts logs to console
  default: False

library
  build-depends: 
      base 
    , aeson
    , ALUT
    , attoparsec
    , bytestring
    , cryptocipher
    , directory
    , filepath
    , gitrev
    , hslogger
    , lens
    , containers
    , macbeth-fics
    , multiset
    , MissingH
    , mtl
    , safe
    , strict
    , stm
    , time
    , text
    , transformers
    , wxcore
    , wx
    , yaml
  hs-source-dirs: src
  other-modules: Paths_macbeth_wx
  ghc-options: -Wall
  if flag(console_log)
    cpp-options: -DCONSOLE_LOG
  default-extensions: 
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiWayIf 
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving 
    TypeSynonymInstances
    ViewPatterns
  exposed-modules: 
    Macbeth.Utils.BoardUtils
    Macbeth.Utils.PGN
    Macbeth.Utils.FEN
    Macbeth.Utils.Utils
    Macbeth.Utils.Salt
    Macbeth.Wx.Challenge
    Macbeth.Wx.Chat
    Macbeth.Wx.ChatRegistry
    Macbeth.Wx.CommandHistory
    Macbeth.Wx.Configuration
    Macbeth.Wx.Config.UserConfig
    Macbeth.Wx.Config.Sounds
    Macbeth.Wx.Config.BoardConfig
    Macbeth.Wx.Config.SeekConfig
    Macbeth.Wx.Finger
    Macbeth.Wx.Game.BoardState
    Macbeth.Wx.Game.Board
    Macbeth.Wx.Game.Game
    Macbeth.Wx.Game.PieceSet
    Macbeth.Wx.Game.StatusPanel
    Macbeth.Wx.Game.GameSounds
    Macbeth.Wx.GamesList
    Macbeth.Wx.Icons
    Macbeth.Wx.Login
    Macbeth.Wx.Match
    Macbeth.Wx.Paths
    Macbeth.Wx.PartnerOffer
    Macbeth.Wx.Pending
    Macbeth.Wx.PlayersList
    Macbeth.Wx.RuntimeEnv
    Macbeth.Wx.Seek
    Macbeth.Wx.Stored
    Macbeth.Wx.SoughtList
    Macbeth.Wx.ToolBox
    Macbeth.Wx.Utils

test-suite macbeth-wx-test
  type: exitcode-stdio-1.0
  ghc-options: -W
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: macbeth-fics, macbeth-wx, base, hspec, bytestring, attoparsec, conduit, aeson
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
